<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_toggle_hex"
        android:title="@string/show_hex"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_auto_send"
        android:checkable="true"
        android:title="@string/auto_send"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear_log"
        android:title="@string/clear_log"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_save_log"
        android:title="@string/save_log"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_commands"
        android:title="@string/commands"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_ble_config"
        android:title="@string/ble_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_disconnect"
        android:title="@string/disconnect"
        app:showAsAction="never" />
</menu>
